<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context="com.example.mea.fruitzela.SignIn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_centerInParent="true">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edtPhone"
                android:hint="@string/phonenumber"
                android:textColorHint="@android:color/white"
                android:text="@string/hintnumber"
                android:textColor="@android:color/white"
                android:textSize="45sp"
                android:inputType="phone"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edtName"
                android:hint="@string/name"
                android:textColorHint="@android:color/white"
                android:text="@string/username1"
                android:textColor="@android:color/white"
                android:textSize="45sp"
                android:inputType="phone"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edtPassword"
                android:hint="@string/Password"
                android:textColorHint="@android:color/white"
                android:text="@string/Password"
                android:textColor="@android:color/white"
                android:textSize="45sp"
                android:inputType="textPassword"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true" />

            <info.hoang8f.widget.FButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_margin="8dp"
                android:layout_alignParentBottom="true"
                android:textColor="#FFFFFF"
                android:id="@+id/btnSignIn"
                android:text="@string/signin"
                android:backgroundTint="#117011"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp" />
        </LinearLayout>

</RelativeLayout>
